@@ -1,5 +1,7 @@
 *SVN*
 
+* Make sure assigns are built for every request when testing #1866
+
 * Allow remote_addr to be queried on TestRequest #1668
 
 * Fixed bug when a partial render was passing a local with the same name as the partial
